<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sirius.driverlicense.ui.auth.auth_second.AuthSecondViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_police"  />

        <TextView
            android:id="@+id/secondTitle"
            style="@style/Regular19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            tools:text="@string/auth_second_title"
            android:text="@{viewModel.labelTextLiveData}"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <TextView
            style="@style/Regular15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/auth_change_label"
            android:padding="16dp"
            android:onClick="@{viewModel::onChangeNameClick}"
         />



        <TextView
            android:id="@+id/secondHint"
            style="@style/Regular15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/auth_second_hint"
            android:textColor="@color/black" />






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/Regular15"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/auth_pass"
                android:textAllCaps="true"

                android:textColor="@color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38dp"
                android:lines="1"
                android:inputType="textPassword"
                android:singleLine="true"
                android:id="@+id/passwordText"
                android:backgroundTint="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nextLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:onClick="@{viewModel::onRegisterClick}"
            android:visibility="@{viewModel.nextVisibilityLiveData}"
            android:padding="16dp">

            <TextView
                style="@style/Regular19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/auth_next"
                android:textAllCaps="true"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"

                android:layout_marginLeft="16dp"
                android:src="@drawable/btn_next" />
        </LinearLayout>
    </LinearLayout>
</layout>