<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="viewModel"
            type="com.sirius.driverlicense.ui.police.PoliceRequesterViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/topView"
            style="@style/TopBarStyle"
            android:layout_alignParentTop="true"
            android:background="@color/dark2BlueColor"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:onClick="@{viewModel::onBackButtonClick}"
                android:padding="14dp"
                android:src="@drawable/ic_close"
                app:tint="@color/white" />

            <TextView
                style="@style/FontBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/verify_documents_title"
                android:textColor="@color/white"
                android:textSize="19sp" />
        </LinearLayout>


        <FrameLayout
            android:id="@+id/policeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/logoLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_police" />

                <TextView
                    android:id="@+id/text"
                    style="@style/FontBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo"
                    android:layout_marginStart="16dp"

                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@{viewModel.policemanTextLiveData}"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="19sp"
                    tools:text="@string/verify_police_policeman" />
            </LinearLayout>


            <ImageView
                android:id="@+id/success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="100dp"
                android:layout_marginRight="80dp"
                android:src="@drawable/success"
                android:visibility="@{viewModel.policemanSuccessIconVisibilityLiveData}"
                app:tint="@color/greenMainText" />

            <ProgressBar
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_gravity="right"
                android:layout_marginTop="92dp"
                android:layout_marginRight="73dp"
                android:theme="@style/Theme.DriverLicense.ProgressBar"
                android:visibility="@{viewModel.policemanLoadingIconVisibilityLiveData}" />


        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topView"
            android:layout_marginTop="130dp"
            tools:visibility = "visible"
            android:visibility="@{viewModel.sharingDocumentVisibilityLiveData}"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/FontBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="19sp"
                    android:id="@+id/verifyTitle"
                    android:text="@string/verify_documents_of"
                    android:textColor="@color/darkBlueColor" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:itemCount="3"
                    android:id="@+id/lastConnectionsContainer"
                    tools:listitem="@layout/item_connection"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>