<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.Gravity" />

        <import type="com.sirius.driverlicense.R" />

        <import type="com.sirius.driverlicense.utils.DateUtils" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="item"
            type="com.sirius.driverlicense.ui.chats.chats.message.ProverItemMessage" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/blue2"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Regular19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/message_credentials_request"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/white"

                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/title"
                                style="@style/FontBold"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="8dp"
                                android:layout_weight="1"
                                android:text="@{item.title}"
                                android:textColor="@color/blue"
                                android:textSize="16sp"
                                tools:text="Permanent Resident Card" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="vertical"

                                >


                                <TextView
                                    android:id="@+id/statusDate"
                                    style="@style/FontBold"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:text="12/22/2021"
                                    android:textColor="@color/blue"
                                    android:textSize="12sp" />

                            </LinearLayout>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/hint"
                            style="@style/Regular14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="@{item.hint}"
                            android:textColor="@color/blue"
                            tools:text="USCIS" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/attachList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false"
                            android:orientation="vertical"
                            android:visibility="gone"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="4"
                            tools:listitem="@layout/view_items_credentials_detail" />


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/buttonsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/cancelBtn"
                        style="@style/Regular15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_accent_rounded_button_disabled"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/action_decline"
                        android:textAllCaps="true"
                        android:textColor="@color/grey3" />

                    <TextView
                        android:id="@+id/yesBtn"
                        style="@style/Regular15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_accent_rounded_button_normal"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/action_yes"
                        android:textAllCaps="true"

                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/showDetailsBtn"
            style="@style/Regular15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_accent_rounded_button_normal"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/action_show_details"

            android:textColor="@color/white" />
    </LinearLayout>
</layout>